@@ -42,8 +42,8 @@ public class AnswerController {
             model.addAttribute("question", question);
             return "question_detail";
         }
-        answerService.create(question, answerForm.getContent(), author);
-        return "redirect:/question/detail/" + id;
+        Answer answer = answerService.create(question, answerForm.getContent(), author);
+        return "redirect:/question/detail/%s#answer_%s".formatted(id, answer.getId());
     }
 
 
@@ -77,7 +77,7 @@ public class AnswerController {
         }
 
         answerService.modify(answer, answerForm.getContent());
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+        return "redirect:/question/detail/%s#answer_%s".formatted(answer.getQuestion().getId(), answer.getId());
     }
 
 
@@ -92,7 +92,7 @@ public class AnswerController {
         }
 
         answerService.delete(answer);
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+        return "redirect:/question/detail/" + answer.getQuestion().getId();
     }
 
 
@@ -103,6 +103,6 @@ public class AnswerController {
         Answer answer = answerService.getAnswer(id);
         SiteUser siteUser = userService.getUser(principal.getName());
         answerService.vote(answer, siteUser);
-        return "redirect:/question/detail/" + answer.getQuestion().getId();
+        return "redirect:/question/detail/%s#answer_%s".formatted(answer.getQuestion().getId(), answer.getId());
     }
 }
